Fixing navbar behaviour related to the scrollbar
Specifically, left-aligning the right-hand navbar items, then increasing the left-hand margin for these items (as a group) to make them appear further to the right. In essence, I am making these items appear right-aligned while actually being left-aligned

--- a/sandboxstyle.css
+++ b/sandboxstyle.css
@@ -9,7 +9,7 @@
     margin-inline-start: 1vh;
   }
   #navbar-links {
-    margin-inline-end: 1vh;
+    margin-inline-start: 1vh;
   }
 }
 @media all and (orientation:landscape) {
@@ -20,7 +20,7 @@
     margin-inline-start: 10vh;
   }
   #navbar-links {
-    margin-inline-end: 10vh;
+    margin-inline-start: 30vh;
   }
 }
 
